fixing timeline seperator width to keep text from wrapping on fallback font.

--- a/MySite/Content/Site.css
+++ b/MySite/Content/Site.css
@@ -640,7 +640,7 @@ ul#social li {
             font-size: 2em;
             margin: 5px auto;
             text-align: center;
-            width: 230px;
+            width: 250px;
         }
         
         
